syntax = "proto3";

package hero;

import "google/protobuf/empty.proto";

service HeroService {
    rpc Get (GetHeroRequest) returns (GetHeroResponse) {
    }

    rpc List (google.protobuf.Empty) returns (ListHeroResponse) {
    }

    rpc Post (GetHeroRequest) returns (ListHeroResponse) 
}

message ListHeroResponse {
    repeated Hero heros = 1;
}

message GetHeroRequest {
    int32 id = 1;
}

message GetHeroRank {
    int32 ranking = 1;
}

message GetHeroResponse {
    Hero hero = 1;
}

message Hero {
    int32 id = 1;
    string name = 2;
    int32 ranking = 3;
}
